[package]
name = "RadixSet"
version = "0.1.0"
edition = "2024"

[dependencies]
flat_map = "0.0.10"
typed-arena = "2.0.2"

[dev-dependencies]
criterion = "0.8.0"
rand = "0.9.2"

[[bench]]
name = "segmented_trie_bench"
harness = false

[lib]
name = "radixset"
path = "src/lib.rs"

[features]
# When enabled, SegmentedTrieSet will use std::collections::BTreeSet for children
# storage instead of the default FlatSet.
btreeset_children = []
